@@ -10,7 +10,7 @@ Build-Depends: autotools-dev,
                libattr1-dev,
                libcap-dev [linux-any],
                libldap2-dev,
-               libmysqlclient-dev,
+               default-libmysqlclient-dev,
                libncurses5-dev,
                libpam-dev,
                libpcre3-dev,
