@@ -26,6 +26,8 @@ proftpd-dfsg (1.3.5a-2) UNRELEASED; urgency=medium
     </quote>
   * lintian "W: invalid-short-name-in-dep5-copyright bsd" (BSD-3-clause).
   * lintian "E: proftpd-basic: init.d-script-needs-depends-on-lsb-base (...)"
+  * E: proftpd-dfsg source: build-depends-on-obsolete-package build-depends:
+    libmysqlclient-dev => default-libmysqlclient-dev
   * Same URL for Vcs-Git & Vcs-Browser in control file.
   * Some suggestions by Mattia Rizzolo <mattia@debian.org> for debian/rules
     - Update of config.{sub,guess} is done by dh_update_autotools_config
